Inclusão de JQuery & Bootstrap. Criação de componentes básicos da estrutra Angular. Criação da comunicação CRUD com o backend.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,13 +2,35 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Uma simples tasklist">
+  <meta name="author" content="Augusto Henrique da Conceição">
+  <title>Tasklist</title>
+  <base href="/">  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+  </style>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<body>
+
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            Tasklist
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="starter-template">
+        <app-root>Loading...</app-root>
+      </div>
+
+    </div><!-- /.container -->
+
 </body>
 </html>
